--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ p {
   margin-top: 10px;
   font-size: 18px;
   line-height: 1.5;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .navigation-links {
@@ -77,7 +77,9 @@ p {
 .about-paragraphs p {
   margin: 10px;
 }
-
+.email-contact-link {
+  margin: 60px 0;
+}
 .email-link {
   display: flex;
   justify-content: center;
@@ -91,4 +93,22 @@ p {
 }
 .about-content {
   text-align: center;
+}
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  p {
+    text-align: center;
+  }
+  .app-link {
+    display: block;
+    text-align: center;
+  }
+  .button-app-link a {
+    margin: 0 20px;
+  }
 }
