--- a/css/style.css
+++ b/css/style.css
@@ -38,19 +38,18 @@ p {
 
 .navigation-links {
   display: flex;
-  margin: 40px 0;
   justify-content: center;
+  margin: 20px;
 }
 
 .navigation-links a,
 .button-app-link a {
-  margin: 20px;
   border-radius: 4px;
   padding: 20px 15px;
   text-decoration: none;
   text-transform: capitalize;
 }
-.button-app-link a {
+.button-app-link {
   margin: 20px 0;
 }
 .email-contact-link {
@@ -62,8 +61,11 @@ p {
   box-shadow: var(--box-shadow);
   color: white;
 }
-
+.contact-link {
+  margin: 0 20px;
+}
 .about-link {
+  margin: 0 20px;
   color: var(--primary-color);
   border: 1px solid var(--primary-color);
 }
@@ -95,12 +97,6 @@ p {
   text-align: center;
 }
 @media (max-width: 576px) {
-  h1 {
-    font-size: 48px;
-  }
-  h2 {
-    font-size: 32px;
-  }
   p {
     text-align: center;
   }
@@ -110,5 +106,13 @@ p {
   }
   .button-app-link a {
     margin: 0 20px;
+  }
+}
+@media (max-width: 768px) {
+  h1 {
+    font-size: 48px;
+  }
+  h2 {
+    font-size: 32px;
   }
 }
